--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,7 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Logs
-
+database.json
 logs
 _.log
 npm-debug.log_
